# b3-portfolio-optimization

./: README.md  pyproject.toml
data/: série histórica DI.csv
queries/: b3_returns_v4.sql
simulations/bova11/: run.py
simulations/multiple-date-range/bova11/: run.py
simulations/multiple-date-range/lw-w63-rb252-rl252/: run.py
simulations/optimization-and-rebalancing-daily-window-252/: run.py
simulations/optimization-and-rebalancing-daily-window-252/outputs/: history.csv  parameters.json
simulations/optimization-and-rebalancing-daily-window-63/: run.py
simulations/optimization-and-rebalancing-daily-window-63/outputs/: history.csv  parameters.json
simulations/optimization-and-rebalancing-monthly-window-252/: run.py
simulations/optimization-and-rebalancing-monthly-window-252/outputs/: parameters.json
simulations/optimization-and-rebalancing-monthly-window-63/: run.py
simulations/optimization-and-rebalancing-monthly-window-63/outputs/: history.csv  parameters.json
simulations/optimization-and-rebalancing-once-window-252/: run.py
simulations/optimization-and-rebalancing-once-window-252/outputs/: history.csv  parameters.json
simulations/optimization-and-rebalancing-once-window-63/: run.py
simulations/optimization-and-rebalancing-once-window-63/outputs/: history.csv  parameters.json
simulations/optimization-and-rebalancing-quarterly-window-63/: run.py
simulations/optimization-and-rebalancing-quarterly-window-63/outputs/: parameters.json
simulations/optimization-and-rebalancing-weekly-window-252/: run.py
simulations/optimization-and-rebalancing-weekly-window-63/: run.py
simulations/optimization-and-rebalancing-yearly-window-252/: run.py
simulations/optimization-and-rebalancing-yearly-window-63/: run.py
src/: optimization.py  simulation.py
(+594 files in other folders)
